--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   meta: ^1.1.6
   rxdart: ^0.23.1
   font_awesome_flutter: ^8.4.0
+  test:
 
 flutter:
   uses-material-design: true
